# Requirements-to-Tests-Generation

./: .gitignore  README.md  conftest.py  pyproject.toml  server.py
.github/workflows/: tests.yml
data/jira/: changes.json  sample_changes.json
data/openapi/: my_api.yaml  petstore.yaml
t2t/: cli.py
t2t/agents/: requirement_agent.py
t2t/generators/: gherkin.py  pytest_gen.py
t2t/guardrails/: validator.py
t2t/traceability/: matrix.py
t2t/utils/: jira_loader.py  openapi_loader.py
t2t_requirements_to_tests.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
